# 6P3-Notes

./: .gitignore  .lazy.lua  .nojekyll  .pdm-python  .prettierignore  .prettierrc  .shell.nix  404.html  README.md  _quarto.yml  _reference-links.md  _sidebar.md  _variables.yml  bun.lockb  color-chromas.scss  colors-dark.scss  colors-light.scss  customizations-dark.scss  customizations-light.scss  index.html  index.qmd  lesson-changelog.md  listings.json  package-lock.json  package.json  pyproject.toml  robots.txt  search.json  shell.nix  sitemap.xml  todo.txt
.old-lessons/: _sidebar.md  docsify_templates.html  lesson-changelog.md
_old-lessons/: index.html
about/: calendar.html  calendar.qmd  colophon.html  course-links.html  course-outline.html  index.html  index.qmd  syllabus.html  syllabus.qmd  this-site.html  this-site.qmd
announcements/: 2024-03-12-lab3-demo.html  2024-03-12-lab3-demo.qmd  2024-03-12-website-updates.html  2024-03-12-website-updates.qmd  2024-03-14-pi-update.html  2024-03-14-pi-update.qmd  2024-03-18-quiz1-topics.html  2024-03-18-quiz1-topics.qmd  2024-04-15-schedule-updates.html  2024-04-15-schedule-updates.qmd  2024-04-18-azure-plan-troubleshooting.html  2024-04-18-azure-plan-troubleshooting.qmd  2024-04-22-grades-update.html  2024-04-22-grades-update.qmd  _metadata.yml  index.html  index.qmd  index.xml
lectures/: index.html  index.qmd
lessons/: 1-tech-stack.md  10-python-extras.md  12-intro-azure-iot.md  13-device-cloud-communication.md  14-azure-sdks.md  15-azure-cli-cheatsheet.md  15-eventhub-dotnet.md  16-storage-message-routing.md  (+11 more)
(+640 files in other folders)
